# PySwiftKit

./: .gitignore  LICENSE  Package.resolved  Package.swift  README.md  RELEASE_NOTES_313.1.2.md  build-macro-binary.sh  pyproject.toml  repack.py  setup.py
.github/: copilot-instructions.md
.github/workflows/: Announce.yml  announce.yml  pip.yml  release_v2.yml  static.yml
PySwiftGenerators.artifactbundle/: info.json
Sources/CDefines/: CDefines.c
Sources/CPySwiftObject/: CPySwiftObject.c  CPySwiftObject.h
Sources/PyBuffering/: PyBufferProtocol.swift
Sources/PyCallable/: PyCallable.swift  PyPointer+PyCall.swift  PythonPointer+Callable.swift
Sources/PyCollection/: PyCollection.swift  PyList.swift  PythonPointer->Array.swift
Sources/PyComparable/: PyComparable.swift  PySwitchCase.swift
Sources/PyDateTime/: PyDateTime.c  PyDateTime.h
Sources/PyDeserializing/: Collections+PyDeserialize.swift  FloatingPoint+PyDeserialize.swift  Foundation+PyDeserialize.swift  Integers+PyDeserialize.swift  PyDeserializing.swift  StdTypes+PyDeserialize.swift
Sources/PyDictionary/: PyDict.swift  PyDictionary.swift
Sources/PyExecute/: PyExecute.swift
Sources/PyExpressible/: PyExpressible.swift
Sources/PyMemoryView/: PyMemoryView.swift
Sources/PyMethodGenerators/: PyMethodGenerators.swift
Sources/PyObjc/: PyObjc.swift
Sources/PyProtocols/: PyClassProtocol.swift  PyModuleProtocol.swift  PyPointerProtocol.swift  PyProtocols.swift  PySequenceProtocol.swift
Sources/PySequence/: PySequence.swift
Sources/PySerializing/: Collections+PyDeserialize.swift  FloatingPoint+PyDeserialize.swift  Foundation+PyDeserialize.swift  Foundation+PySerialize.swift  Integers+PyDeserialize.swift  PyDeserialize.swift  PySerialize.swift  PySerializing.swift  StdTypes+PyDeserialize.swift
Sources/PySwiftConcurrency/: PySwiftConcurrency.swift
Sources/PySwiftCore/: Alias+Functions.swift  Alias.swift  PyBufferProtocol.swift  PyModuleDef.swift  PyNumberProtocol.swift  PythonError.swift  PythonGIL.swift  PythonPointer.swift
Sources/PySwiftGenerators/: Extensions.swift  PyCallbackGenerator.swift  PyCasted.swift  PyClassByExtensionUnpack.swift  (+10 more)
pyswiftkit/: __init__.py  libPySwiftKit.dylib
pyswiftkit.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+172 files in other folders)
